--- a/17_Tour/Views/Product/thuvien.cshtml
+++ b/17_Tour/Views/Product/thuvien.cshtml
@@ -41,7 +41,7 @@
             </div>
             if (item.ImagesSlide.Length > 1)
             {
-                <section class="grid-wrap" id="tab-description" style="margin-top: 7vh;">
+                <section class="grid-wrap" id="tab-description" style="margin-top: 10vh;">
                     <div class="grid swipe-right owl-carousel-4 box-slide d-inline-flex" id="grid">
                         @for (int i = 1; i < item.ImagesSlide.Length; i++)
                         {
@@ -65,7 +65,7 @@
         @if (item.ImagesSlide2 != null && item.ImagesSlide2.Length > 0)
         {
 
-            <div class="text-center" style="margin-top: 10vh;">
+            <div class="text-center" style="margin-top: 10vh;margin-bottom: 10vh;">
                 <h1 class="font-bold-play-fair"><strong>Sự kiện</strong></h1>
                 <h4>Ảnh</h4>
             </div>
