--- a/17_Tour/assets/css/styles.css
+++ b/17_Tour/assets/css/styles.css
@@ -1,33 +1,34 @@
 .row.footer {
-  margin-top: 3vh;
+    margin-top: 3vh;
 }
 
 .carousel-indicators .active {
-  background-color: rgb(95,95,95);
+    background-color: rgb(95,95,95);
 }
 
 .carousel-indicators li {
-  border-radius: 50%;
-  width: 5px;
-  height: 5px;
-  background-color: #404040;
+    border-radius: 50%;
+    width: 5px;
+    height: 5px;
+    background-color: #404040;
 }
 
 .carousel-item:hover .carousel-fade {
-  opacity: 0.4;
+    opacity: 0.4;
 }
 
 .carousel-inner.aboutText {
-  width: 100%;
+    width: 100%;
 }
 
 .figure.col-3 {
-  padding: 0px!important;
+    padding: 0px !important;
 }
 
 .body-back {
-  background-color: rgb(220,220,220);
+    background-color: rgb(220,220,220);
 }
+
 .upText {
     padding-top: 10%;
     padding-left: 1%;
@@ -39,29 +40,31 @@
         padding-top: 5%;
     }
 
-.upText .upText-Text {
-  visibility: hidden;
-  /*background-color: white;*/
-}
-    .upText .upText-Text p{
-        margin-top:10px;
-        margin-bottom:5px;
+    .upText .upText-Text {
+        visibility: hidden;
+        /*background-color: white;*/
     }
+
+        .upText .upText-Text p {
+            margin-top: 10px;
+            margin-bottom: 5px;
+        }
+
     .upText:hover .upText-Text {
         visibility: visible;
     }
 
 .pad-mr-0 {
-  padding: 0%;
-  margin: 0%;
+    padding: 0%;
+    margin: 0%;
 }
 
 .item-fade:hover .item-fade-img {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 
 .item-fade:hover .item-fade-text {
-  visibility: visible;
+    visibility: visible;
 }
 
 .item-fade-text {
@@ -72,30 +75,30 @@
     visibility: hidden;
     top: 36%;
 }
-.item-fade-text h4{
-  font-family: 'Playfair Display';
-  font-weight: bold;
-}
+
+    .item-fade-text h4 {
+        font-family: 'Playfair Display';
+        font-weight: bold;
+    }
 
 .tv-card-item {
-  background-color: #dadada;
-  text-align: left;
-  padding-left: 1%;
-  padding-right: 1%;
+    background-color: #dadada;
+    text-align: left;
+    padding-left: 1%;
+    padding-right: 1%;
 }
 
-.tv-card-item .tv-card-img {
-  background-color: #dadada;
-  width: 100%;
- 
-}
+    .tv-card-item .tv-card-img {
+        background-color: #dadada;
+        width: 100%;
+    }
 
 .cscn-item .cmt {
-  background-image: url(/assets/img/dau-ngoac-hoi.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 30%;
-  min-height: 100px;
+    background-image: url(/assets/img/dau-ngoac-hoi.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 30%;
+    min-height: 100px;
 }
 
 .cscn-item {
@@ -108,73 +111,77 @@
 
 
 .footer {
-  padding: 35px 40px;
-  color: rgba(255,255,255,1.00);
-  /*margin-bottom: 20px;*/
-  border-bottom-right-radius: 5px;
-  border-top-left-radius: 0px;
-  border-bottom-left-radius: 5px;
-  background-color: rgb(41,41,41);
+    padding: 35px 40px;
+    color: rgba(255,255,255,1.00);
+    /*margin-bottom: 20px;*/
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 5px;
+    background-color: rgb(41,41,41);
 }
 
 html, body {
-  max-width: 100%;
-  overflow-x: hidden;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .home-mau-xam {
-  background-color: #dadada;
+    background-color: #dadada;
 }
 
 #About {
-  background-color: #6b6b6b;
+    background-color: #6b6b6b;
 }
 
 #cscn-item-id img {
-  width: 40%;
-  padding-bottom: 3%;
+    width: 40%;
+    padding-bottom: 3%;
 }
 
 .hanhTrinh-text p {
-  margin-right: 15%;
+    margin-right: 15%;
 }
 
 .hanhTrinh-hoatDong figure {
-  margin: 0px;
+    margin: 0px;
 }
 
 #cscn-item-id p {
-  padding-left: 5%;
-  padding-right: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .nav-item {
-  width: 16%;
-  text-align: center;
+    width: 16%;
+    text-align: center;
 }
 
-.nav-item a {
-  padding-left: 0px!important;
-  padding-right: 0px!important;
-}
+    .nav-item a {
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+    }
 
 .intro-text {
-  position: absolute;
-  top: 31%;
-  color: white;
-  padding-left: 7%;
-  width: 50%;
+    position: absolute;
+    top: 31%;
+    color: white;
+    padding-left: 7%;
+    width: 50%;
 }
-.home-slide{
-    position:relative;
+
+.home-slide {
+    position: relative;
 }
+
 .gach-xanh {
-    width: 30px!important;
+    width: 30px !important;
     padding-left: 2px;
 }
+
 .Intro {
-    width: 100%;  
-} 
+    width: 100%;
+}
+
 .Intro-video {
     position: absolute;
     left: auto;
@@ -184,62 +191,62 @@ html, body {
 }
 
 .nav-item:hover a .nav-item-under {
-  border-bottom: 2px solid #74c8e0;
+    border-bottom: 2px solid #74c8e0;
 }
 
 .nav-item a .nav-item-under {
-  width: 80%;
-  margin: 0px 0px 0px 10%;
-  padding: 0px;
+    width: 80%;
+    margin: 0px 0px 0px 10%;
+    padding: 0px;
 }
 
 #cscn-boder {
-  border-bottom: 2px solid #74c8e0;
+    border-bottom: 2px solid #74c8e0;
 }
 
 .soc-icon {
-  background: #25c5b2;
-  width: 10px!important;
-  height: 5px!important;
-  /* font-size: 1.5rem; */
-  text-align: left;
-  border-radius: 50%;
-  line-height: 0px;
-  /* padding-top: 1.5vw;
+    background: #25c5b2;
+    width: 10px !important;
+    height: 5px !important;
+    /* font-size: 1.5rem; */
+    text-align: left;
+    border-radius: 50%;
+    line-height: 0px;
+    /* padding-top: 1.5vw;
   padding-right: 2vw;
   padding-bottom: 1.5vwpx;
   padding-left: 1vw; */
-  padding-left: 0.6rem;
-  padding-top: 0.9rem;
-  padding-right: 1.2rem;
-  padding-bottom: 0.9rem;
-  color: black;
+    padding-left: 0.6rem;
+    padding-top: 0.9rem;
+    padding-right: 1.2rem;
+    padding-bottom: 0.9rem;
+    color: black;
 }
 
 #cscn-item-id img {
-  padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .show-more-icon {
-  font-size: 40px;
-  color: rgb(157,165,174);
-  padding-bottom: 4%;
+    font-size: 40px;
+    color: rgb(157,165,174);
+    padding-bottom: 4%;
 }
 
-.show-more-icon:hover {
-  color: black;
-}
+    .show-more-icon:hover {
+        color: black;
+    }
 
 #showMore {
-  display: none;
+    display: none;
 }
 
 .icon-hide {
-  display: none;
+    display: none;
 }
 
 .icon-show {
-  display: block;
+    display: block;
 }
 
 
@@ -248,8 +255,8 @@ html, body {
     width: 30px;
     height: 50px;
     line-height: 50px;
-    text-align: center;    
-    color: transparent;    
+    text-align: center;
+    color: transparent;
     position: absolute;
     top: 50%;
     content: "";
@@ -265,7 +272,7 @@ html, body {
     -o-transition: all 0.4s ease-in-out 0s;
     -webkit-transition: all 0.4s ease-in-out 0s;
     -ms-transition: all 0.4s ease-in-out 0s;
-    filter: alpha(opacity=0);    
+    filter: alpha(opacity=0);
     cursor: pointer;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -278,20 +285,72 @@ html, body {
     /*background-image: url(/images/icons/icon-left.png);*/
     background-image: url(/assets/img/1.svg);
 }
+
 .box-slide .owl-controls .owl-next {
     right: 0px;
     /*background-image: url(/images/icons/icon-right.png);*/
     background-image: url(/assets/img/2.svg);
 }
+
 .caroucel-style2 .owl-controls .owl-prev, .caroucel-style2 .owl-controls .owl-next {
     top: 40%;
 }
-.tv-card-text{
-    margin:15px;
+
+.tv-card-text {
+    margin: 15px;
 }
+
 .hanhTrinh-text {
     padding-top: 5%;
     padding-right: 8%;
     padding-left: 8%;
     padding-bottom: 5%;
+}
+
+#brand-item .item img {
+    max-width: 202px;
+    margin: 44px 0px 36px 0px;
+}
+#page-container{
+    margin-top:50px;
+}
+.navbar-expand-md .navbar-nav .nav-link{
+    font-weight:900;
+}
+.footer .col-10 p {
+    margin-right: 100px;
+}
+
+    .footer .col-10 p:first-child {
+        border-right: solid 1px rgb(255, 255, 255);
+        padding-right: 100px;
+    }
+
+@media only screen and (max-width: 768px) {
+    .footer .col-10 p:first-child {        
+        border-right: solid 0px rgb(255, 255, 255)!important;
+        border-bottom: solid 1px rgb(255, 255, 255);
+        padding-bottom:21px;
+    }
+    #brand-item .item img {
+        max-width:115px;
+        margin: 30px 0px 6px 0px;
+    }
+    #brand-item .item img:last-child {
+        
+        margin-bottom:25px;
+    }
+
+    .nav-item {
+        width: 100%;
+        text-align: left;
+    }
+
+    #navcol-1 {
+        margin-left: 0px !important;
+    }
+
+        #navcol-1 .nav-link img {
+            width: 35px !important;
+        }
 }
