--- a/17_Tour/Views/Product/Index.cshtml
+++ b/17_Tour/Views/Product/Index.cshtml
@@ -26,24 +26,10 @@
             <link rel="stylesheet" type="text/css" href="/assets/SamsungGrid/css/component.css" />*@
 
     }
-    @section Styles {
-        <style>
-            .grid.swipe-right li.animate .curtain {
-                animation: swipeRight 1.5s cubic-bezier(0.6,0,0.4,1) forwards;
-            }
-
-            @@keyframes swipeRight {
-                50%, 60% {
-                    transform: translate(0);
-                }
-
-                100% {
-                    transform: translate3d(100%,0,0);
-                }
-            }
-        </style>
-    }
+<div class="row" id="page-container">
     @Html.Raw(item.Detail)
+</div>
+    
     if (item.ImagesSlide != null && item.ImagesSlide.Length > 0)
     {
         <div class="container-fluid">
@@ -51,13 +37,10 @@
                 <h1 class="font-bold-play-fair">Gallery</h1>
                 <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
             </div>
-
             <section class="grid-wrap" id="tab-description">
                 <div class="grid swipe-right owl-carousel-3 box-slide d-inline-flex" id="grid">
-
                     @foreach (var imagesSlide in item.ImagesSlide)
                     {
-
                         <div class="item" style="padding-right:10px;padding-left:10px;"><a href="@imagesSlide" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image"><img src="@imagesSlide" alt="@item.PrName"></a></div>
                     }
                 </div>
@@ -68,12 +51,15 @@
                         <h1 class="font-bold-play-fair">Nhà tài trợ</h1>
                         <div class="divgachxannh" style="width: 4%;margin-left: 48%;margin-bottom:10vh"></div>
                     </div>*@
-                <section class="grid-wrap text-center" id="tab-description">
-                    <div class="grid swipe-right owl-carousel-8 box-slide d-inline-flex" id="grid">
+                <section class="col-md-12 grid-wrap text-center" id="tab-description">
+                    @*<div class="grid owl-carousel-8 box-slide" id="grid">*@
+                    <div class="grid" id="brand-item">
                         @foreach (var imagesSlide in item.ImagesSlide2)
                         {
-                            <div class="item"><a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image">
-                                <img src="@imagesSlide.ImagesUrl" alt="@item.PrName"></a>
+                            <div class="item">
+                                <a href="@imagesSlide.ImagesUrl" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image">
+                                    <img src="@imagesSlide.ImagesUrl" alt="@item.PrName">
+                                </a>
                             </div>
                         }
                     </div>
@@ -107,7 +93,8 @@
                 });
                 $('.owl-carousel-8').owlCarousel({
                     center: true,
-                    itemsCustom: [                        
+
+                    itemsCustom: [
                         [768, 4],
                         [1024, 8],
                         [1200, 8]
@@ -115,7 +102,7 @@
                     navigation: true,
                     autoPlay: true
                 });
-                 
+
                 //new GridScrollFx(document.getElementById('grid'), {
                 //    viewportFactor: 0.4
                 //});
@@ -155,4 +142,36 @@
             }
         </script>
     }
+}
+@section Styles {
+    <style>
+        #brand-item .item {
+            text-align: center;
+            display: inline-block;
+            margin: 0 15px 0 15px;
+        }
+
+        .grid.swipe-right li.animate .curtain {
+            animation: swipeRight 1.5s cubic-bezier(0.6,0,0.4,1) forwards;
+        }
+
+        .owl-carousel .owl-stage {
+            display: flex;
+            align-items: center;
+        }
+
+        .owl-carousel .caption {
+            text-align: center;
+        }
+
+        @@keyframes swipeRight {
+            50%, 60% {
+                transform: translate(0);
+            }
+
+            100% {
+                transform: translate3d(100%,0,0);
+            }
+        }
+    </style>
 }
