--- a/17_Tour/Views/Home/Index.cshtml
+++ b/17_Tour/Views/Home/Index.cshtml
@@ -291,7 +291,7 @@
                     {
                         foreach (var item in adsList)
                         {
-                            <img class="col-1" src="@item.ImagesUrl">
+                            <img class="col-md-4" src="@item.ImagesUrl" style="max-width:150px;">
                         }
                     }
                 }
