--- a/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
@@ -129,7 +129,7 @@
     <script src="~/Scripts/Bootrap.notify.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script src="~/Scripts/Anpero.Common.js"></script>
-    <script src="/Scripts/Warranty.js"></script>
+    <script src="/Scripts/Warranty.js?v=3"></script>
     <script>
         var googleCatcha;
         $(document).ready(function () {
