--- a/17_Tour/Views/Product/thuvien.cshtml
+++ b/17_Tour/Views/Product/thuvien.cshtml
@@ -146,6 +146,9 @@
 }
 @section Styles {
     <style>
+        h4{
+            font-family:PlayfairBold;
+        }
         .owl-carousel-3 .panel {
             margin: 0 10px 0 10px;
         }
