--- a/17_Tour/html/assets/css/hanhtrinh.css
+++ b/17_Tour/html/assets/css/hanhtrinh.css
@@ -1,6 +1,7 @@
 .divgachxannh {
-    border: 1px cyan solid;
-    height: 1px;
+    border: 1px #74c9dd solid;
+    height: 5px;
+    background-color: #74c9dd;
 }
 
 #tbcntt {
