--- a/17_Tour/Views/Product/Index.cshtml
+++ b/17_Tour/Views/Product/Index.cshtml
@@ -145,6 +145,9 @@
 }
 @section Styles {
     <style>
+        .text-center h3 strong{
+            font-family:PlayfairBold;
+        }
         .col-md-7 .lazy img, .col-md-6 .lazy img {
             width: 100%;
         }
