--- a/12_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -105,82 +105,6 @@
     </div>
     <!--box-slide-ads-->
 }
-
-@if (ViewData["BestsaleProduct"] != null)
-{
-    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
-    if (bestSaleList != null && bestSaleList.Item.Length > 0)
-    {
-        <div class="box-top-products box-slide">
-            <div class="container">
-                <div class="box-title">
-                    <h2 class="title">Top bán chạy</h2>
-                    <a href="/search" class="view-all top-all hidden-xs translateY-50 transition-3">Xem thêm <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
-                </div>
-
-                <div class="owl-carousel owl-carousel-6" id="">
-                    @for (var i = 0; i < bestSaleList.Item.Length; i++)
-                    {
-                        var item = bestSaleList.Item[i];
-                        <div class="item box-product">
-                            <div class="icon icon-top">@(i + 1)</div>
-                            <div class="main">
-                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="images">
-                                    <img src="@item.Images" alt="@item.PrName">
-                                </a>
-                                <div class="detail text-center clearfix">
-                                    <h3 class="name">
-                                        <a class="" ref="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
-                                            @item.PrName
-                                        </a>
-                                    </h3>
-                                    <div class="box-prince">
-                                        <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-        </div>
-        <!--box-top-products-->
-    }
-}
-@*@Html.Partial("_partial_ProductListBycategory")*@
-@Html.Partial("_partial_NewProduct")
-
-@if (ViewBag.Ads3 != null)
-{
-    Ads[] ads3 = (Ads[])ViewBag.Ads3;
-    <div class="box-slide-ads hidden-xs">
-        <div class="container">
-            @for (var i = 0; i < ads3.Length; i += 2)
-            {
-                <div class="row">
-                    <div class="col-sm-6 col-xs-6 item-slide">
-                        <div class="image-hover">
-                            <a href="@ads3[i].ClickUrl">
-                                <img alt="@ads3[i].Description" src="@ads3[i].ImagesUrl">
-                            </a>
-                        </div>
-                    </div>
-                    @if (i + 1 < ads3.Length)
-                    {
-                        <div class="col-sm-6 col-xs-6 item-slide">
-                            <div class="image-hover">
-                                <a href="@ads3[i+1].ClickUrl">
-                                    <img alt="@ads3[i+1].Description" src="@ads3[i+1].ImagesUrl">
-                                </a>
-                            </div>
-                        </div>
-                    }
-                </div>
-            }
-        </div>
-    </div>
-    <!--box-slide-ads-->
-}
 @if (ViewData["FeatureArticle"] != null)
 {
     SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
@@ -205,8 +129,7 @@
                                     </a>
                                 </div>
                                 <ul class="info-new">
-                                    <li class="time"><i class="fa fa-calendar" aria-hidden="true"></i> <time>@Anpero.StringHelpper.ConvertDateTime(item.CreateDate).ToString("dd/mm/yyyy")</time></li>
-
+                                    <li class="time"><i class="fa fa-calendar" aria-hidden="true"></i> <time>@Anpero.StringHelpper.ConvertDateTime(item.CreateDate).ToString("dd/mm/yyyy")</time></li>                                     
                                     <li class="post"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>@item.CategoryName</span></li>
                                 </ul>
                             </div>
@@ -223,3 +146,94 @@
         </div>
     </div>
 }
+
+@if (ViewData["BestsaleProduct"] != null)
+{
+    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
+    if (bestSaleList != null && bestSaleList.Item.Length > 0)
+    {
+        <div class="box-slide box-top-products">
+            <div class="container">
+                <div class="box-title">
+                    <h2 class="title">Top bán chạy</h2>
+                    <a href="/search" class="view-all top-all hidden-xs translateY-50 transition-3">Xem thêm <i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                </div>
+                <div class="row">
+                    @for (var i = 0; i < bestSaleList.Item.Length; i++)
+                    {
+                        var item = bestSaleList.Item[i];
+                    <div class="col-md-3 col-6">
+                        <div class="item box-product" style="margin-bottom:15px;">
+                            <div class="icon icon-top">@(i + 1)</div>
+                            <div class="main">
+                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName" class="images">
+                                    <img src="@item.Images" alt="@item.PrName">
+                                </a>
+                                <div class="detail text-center clearfix">
+                                    <h3 class="name">
+                                        <a class="" ref="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
+                                            @item.PrName
+                                        </a>
+                                    </h3>
+                                    <div class="box-prince">
+                                        <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                     
+                    }
+                </div>
+            </div>
+        </div>
+        <!--box-top-products-->
+    }
+}
+@*@Html.Partial("_partial_ProductListBycategory")*@
+@Html.Partial("_partial_NewProduct")
+
+@if (ViewBag.Ads3 != null)
+{
+    Ads[] ads3 = (Ads[])ViewBag.Ads3;
+    <div class="box-slide-ads hidden-xs">
+        <div class="container">
+            @for (var i = 0; i < ads3.Length; i += 2)
+            {
+                <div class="row">
+                    <div class="col-sm-6 col-6 item-slide">
+                        <div class="image-hover">
+                            <a href="@ads3[i].ClickUrl">
+                                <img alt="@ads3[i].Description" src="@ads3[i].ImagesUrl">
+                            </a>
+                        </div>
+                    </div>
+                    @if (i + 1 < ads3.Length)
+                    {
+                        <div class="col-sm-6 col-xs-6 item-slide">
+                            <div class="image-hover">
+                                <a href="@ads3[i+1].ClickUrl">
+                                    <img alt="@ads3[i+1].Description" src="@ads3[i+1].ImagesUrl">
+                                </a>
+                            </div>
+                        </div>
+                    }
+                </div>
+            }
+        </div>
+    </div>
+    <!--box-slide-ads-->
+}
+<style>
+    .box-top-products .row{
+        margin:0 -10px;
+    }
+    .box-top-products .col-6 {
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+    .box-top-products .col-6 .item {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+</style>
