--- a/12_Shop_MultiProduct-2/Content/theme/css/_value.scss
+++ b/12_Shop_MultiProduct-2/Content/theme/css/_value.scss
@@ -3,7 +3,7 @@ $text-color: #333;
 $color-666: #666;
 $color-999: #999;
 $color-white: #fff;
-$color-main: #00a651;
+$color-main: #3481D1;
 // Border radius
 @mixin border-radius($val: 4px) {
   -webkit-border-radius: $val; -moz-border-radius: $val; -ms-border-radius: $val; border-radius: $val;
